Adding comments for calling constructour inside another constructor